flux/bastille/apps/network/envoy-gateway/app/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname edge.chancey.dev
    io.cilium/lb-ipam-ips: 10.12.0.11
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-proxy-edge
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.chancey.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: chancey-dev-tls
